User CRUD operations added, swagger file, routes and controllers updated
